--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,14 @@ margin-top: 1cm;
   display: inline;
 
 }
+
 .menubotoes {
   margin-right: 1.5cm;
+}
+.menulogo{
+  float: left;
+  width: 1.8cm;
+  margin-left: 0.2cm;
 }
 .Menupg ul li a {
   padding-top: 0.5cm;
@@ -78,9 +84,8 @@ margin-top: 1cm;
 .Menupg h1{
   float: left;
   text-align: left;
-  margin-top: 0;
+  margin-top: 0.2cm;
   margin-left: 10px;
-  margin-bottom: 0px;
 }
 .Destaquepg ul {
   text-align: left;
@@ -718,7 +723,7 @@ a{
   .Menupg{
     margin-top: -2em;
     justify-content: center;
-    height: 1.5cm;
+    height: 3cm;
   }
   .titulopg {
     margin-top: 2.5cm;
@@ -736,7 +741,8 @@ a{
   }
   .Menupg ul li {
     display: inline;
-    margin-right: 0;
+      margin-right: 0;
+      font-size: medium;
 
   }
   .menu ul {
@@ -746,8 +752,12 @@ a{
   }
   .Menupg{
     margin-top: 0em;
-    justify-content: center;
-    height: 2.5cm;
+      justify-content: center;
+      height: 3cm;
+  }
+  .Menupg h1 {
+      margin-top: 0.5cm;
+      font-size: larger;
   }
   .Menupg-titulo{
     min-width: 0%;
